# agent-platform

./: .gitignore
.github/workflows/: platform-tests.yml
agents/care-management/pre-call-assessment/services/agent-runtime/: Dockerfile  pyproject.toml
agents/care-management/pre-call-assessment/services/agent-runtime/config/: base.yaml
agents/care-management/pre-call-assessment/services/agent-runtime/src/clients/: base.py  rag_client.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/graph/: build_graph.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/platform/: app.py  config.py  context.py  langgraph_runner.py  usecase_contract.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/platform/hitl/: memory_writer.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/platform/llm/: responder.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/platform/memory/: config_loader.py  context_builder.py  scope_resolver.py
agents/care-management/pre-call-assessment/services/agent-runtime/src/platform/tools/: bindings.py  router.py
capabilities/care-management/: domain.yaml
docs/: 00-documentation-agenda.md  01-repo-and-file-structure.md  02-agent-types.md  03-new-usecase-checklist-chat-agent.md  04-architecture-walkthrough.md  05-deployment-and-infrastructure.md  06-tool-design-and-tool-gateway.md  07-hitl.md  08-rag-retrieval.md  09-memory.md  10-prompt-management.md  README.md  accelerator-technical-design.html  agent-template-target-state.md  agentcore-compatibility.md  backlog.md  configuration-guide.md  containers-and-build.md  customer-delivery-playbook.html  demo-script-voice.md  demo-script.md  hitl-design-spec.md  how-to-extend.md  internal-playbook.html  linkedin-carousel.html  linkedin-platform-visual.html  memory-architecture.md  offering-architecture-v2.html  offering-architecture-v3.html  offering-architecture.html  offering-proposal-summary.html  offering-proposal.html  platform-architecture-diagram.html  platform-architecture-full.html  platform-architecture-logical.html  platform-architecture-planes.html  platform-architecture-split.html  platform-architecture-visual.html  platform-components-split.html  platform-components.md  (+9 more)
docs/design/: agent-flow-diagrams.html  agent-taxonomy-matrix.html  client-chatbot-platform-proposal.html  design.md  memory-write-design.md  prototype-current-state.html  runtime-split-design.md
docs/diagrams/: generate_diagrams.py
docs/memory/: memory-admin-ui-v1.md  memory-architecture-v1.md  memory-config-v1.yaml  memory-runtime-contract-v1.md  memory-schema-v1.sql
docs/proposal/: accelerator-technical-design.html  customer-delivery-playbook.html  internal-playbook.html  offering-architecture-v3.html  offering-pr-faq.html  (+2 more)
platform-core/: pyproject.toml
platform-core/src/platform_core/: __init__.py  langgraph_runner.py  manifest_loader.py  usecase_config_loader.py
platform-core/src/platform_core/hitl/: approval_store.py  memory_writer.py
platform-core/src/platform_core/llm/: responder.py
platform-core/src/platform_core/memory/: backend_factory.py  context_builder.py  memory_interface.py  scope_resolver.py  semantic_engine.py  summary_engine.py
platform-core/src/platform_core/rag/: runner.py
platform-core/src/platform_core/rag/patterns/: self_corrective.py
platform-core/src/platform_core/tools/: discovery.py
platform-store/: usecase_contracts.json
services/rag/: .env.example  Dockerfile  README.md  bootstrap_kb.py  pyproject.toml
services/rag/src/: main.py
shared-infra/platform-services/: .env.example  Dockerfile  pyproject.toml
shared-infra/platform-services/src/services/config/: router.py
shared-infra/platform-services/src/services/reasoning/: router.py
shared-infra/platform-services/src/services/summarize/: router.py
(+314 files in other folders)
