[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "platform-core"
version = "0.1.0"
description = "Shared platform library for agent runtimes — schema validation and plugin registry"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
