[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform-core"
version = "0.1.0"
description = "Shared platform library for agent runtimes — memory, RAG, HITL, tools, observability"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.32.0",
    "fastapi>=0.129.0",
    "langgraph>=1.0.8",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "boto3>=1.42.0",
    "python-dotenv>=1.0.0",
    "pyjwt[crypto]>=2.9.0",
    "jsonschema>=4.22.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
