[tool.poetry]
name = "platform-services"
version = "0.1.0"
description = "Platform Services — Container 2 of the 3-container agent architecture"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
langgraph = { version = "^1.0.8", extras = ["sqlite"] }
# platform-core is installed separately via pip install -e /platform-core in Dockerfile
# All shared deps (fastapi, langchain, memory, RAG, HITL, tools) come from platform-core

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 100
