[tool.poetry]
name = "agent-runtime"
version = "0.1.0"
description = "LangGraph agent runtime"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
langgraph = { version = "^1.0.8", extras = ["sqlite"] }
# platform-core is installed separately via pip install -e /platform-core in Dockerfile
# All other shared deps (fastapi, langchain, memory, RAG, HITL) come from platform-core


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]



