[tool.poetry]
name = "agent-runtime"
version = "0.1.0"
description = "LangGraph agent runtime"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.27.0"
# platform-core installed separately for HITL adapters, approval_store, auth, context utils
# All strategy/memory/RAG/tool logic moved to Container 2 (platform-services) — called via HTTP


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.4.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]



